fix margin top spacing on searchfile

--- a/client/scss/_search.scss
+++ b/client/scss/_search.scss
@@ -7,5 +7,5 @@
 
 .recipes-searched {
   position: relative;
-  margin-top: 30px 0 0 0;
+  margin-top: 30px;
 }
